WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302119
REGRESSION(
302580@main):[macOS
] webanimations/accelerated-animation-easing-update-after-pause.html is a flaky failure in image diff
https://bugs.webkit.org/show_bug.cgi?id=302119
Summary
REGRESSION(302580@main):[macOS] webanimations/accelerated-animation-easing-up...
Marta Darbinyan
Reported
2025-11-06 13:57:21 PST
The test is failing on macOS with image diff after
302580@main
webanimations/accelerated-animation-easing-update-after-pause.html Imagediff:
https://ews-build.s3-us-west-2.amazonaws.com/macOS-Sonoma-Release-WK1-Tests-EWS/3d3da139-34437-rerun/webanimations/accelerated-animation-easing-update-after-pause-diffs.html
Test history:
https://results.webkit.org/?suite=layout-tests&test=webanimations%2Faccelerated-animation-easing-update-after-pause.html
Test result:
https://ews-build.webkit.org/#/builders/135/builds/34437
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-06 13:57:37 PST
<
rdar://problem/164198990
>
EWS
Comment 2
2025-11-06 14:28:06 PST
Test gardening commit
302685@main
(a0382fc5c7ef): <
https://commits.webkit.org/302685@main
> Reviewed commits have been landed. Closing PR #53559 and removing active labels.
Antoine Quint
Comment 3
2025-11-07 02:33:46 PST
I expect the change to require animations not to be pending caused a change here. Might require a test change.
Antoine Quint
Comment 4
2025-11-07 02:50:31 PST
rwt --debug webanimations/accelerated-animation-easing-update-after-pause.html --iterations 100 --force [1/100] webanimations/accelerated-animation-easing-update-after-pause.html failed unexpectedly (reference mismatch maxDifference=167; totalPixels=100) [9/100] webanimations/accelerated-animation-easing-update-after-pause.html failed unexpectedly (reference mismatch maxDifference=47; totalPixels=100) [41/100] webanimations/accelerated-animation-easing-update-after-pause.html failed unexpectedly (reference mismatch maxDifference=237; totalPixels=200) [56/100] webanimations/accelerated-animation-easing-update-after-pause.html failed unexpectedly (reference mismatch maxDifference=26; totalPixels=100) 96 tests ran as expected, 4 didn't.
Antoine Quint
Comment 5
2025-11-07 04:23:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53584
EWS
Comment 6
2025-11-07 07:07:59 PST
Committed
302724@main
(66754d9a9c19): <
https://commits.webkit.org/302724@main
> Reviewed commits have been landed. Closing PR #53584 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug