REGRESSION(302580@main):[macOS] webanimations/accelerated-animation-easing-update-after-pause.html is a flaky failure in image diff https://bugs.webkit.org/show_bug.cgi?id=302119 rdar://164198990

Reviewed by Alan Baradlay.

Restrict the new requirement on accelerated animations to not be pending introduced in 302580@main to scroll-driven animations.

* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::canBeAccelerated const):

Canonical link: https://commits.webkit.org/302724@main